--- a/css/preload.css
+++ b/css/preload.css
@@ -1,44 +1,47 @@
 .preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    z-index: 9999;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffffb3;
+  z-index: 9999;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.loader {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  background-size: 100px;
+  background-repeat: no-repeat;
+  background-position: 10px 10px;
+  width: 120px;
+  height: 120px;
+  box-shadow: 0 8px 0 0 #461c7d;
+  border-radius: 60%;
+  animation: ldio-h9e1k59u16w 0.7s linear infinite;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes ldio-h9e1k59u16w {
+  0% {
+      transform: rotate(0deg)
   }
-  
-  .loader {
-    position: absolute;
-    transform: translate(-50%, -50%);
-    background-image: url("https://media.discordapp.net/attachments/1108306137230610432/1108581131001012294/mainlogodark.png?");
-    background-size: 100px;
-    background-repeat: no-repeat;
-    background-position: 10px 10px;
-    width: 120px;
-    height: 120px;
-    border: 10px solid #f3f3f3;
-    border-top: 10px solid #3498db;
-    border-radius: 50%;
-    animation: spin 2s ease-in-out infinite;
-    justify-content: center;
-    align-items: center;
+
+  50% {
+      transform: rotate(180deg)
   }
-  
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
+
+  100% {
+      transform: rotate(360deg)
   }
-  
-  /* Hide the preloader when content is loaded */
-  body.loaded .preloader {
-    display: none;
-  }
-  
+}
+
+
+/* Hide the preloader when content is loaded */
+body.loaded .preloader {
+  display: none;
+}
